[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/quentincaffeino-console/src/Console.gd" type="Script" id=1]
[ext_resource path="res://addons/quentincaffeino-console/assets/fonts/source-code-pro/OTF/SourceCodePro-BoldIt.otf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/quentincaffeino-console/assets/fonts/source-code-pro/OTF/SourceCodePro-It.otf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/quentincaffeino-console/assets/fonts/source-code-pro/OTF/SourceCodePro-Bold.otf" type="DynamicFontData" id=4]
[ext_resource path="res://addons/quentincaffeino-console/assets/fonts/source-code-pro/OTF/SourceCodePro-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://addons/quentincaffeino-console/src/ConsoleLine.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
length = 0.25
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath("Container/ConsoleLine")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "clear"
}, {
"args": [  ],
"method": "clear"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0132904, 0.186026, 0.261719, 0.701458 )
border_blend = true

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 5 )

[node name="Console" type="CanvasLayer"]
pause_mode = 2
layer = 128
script = ExtResource( 1 )

[node name="ConsoleBox" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.8 )
anchor_right = 1.0
anchor_bottom = 0.5
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ConsoleBox"]
anims/fade = SubResource( 1 )

[node name="Container" type="VBoxContainer" parent="ConsoleBox"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ConsoleText" type="RichTextLabel" parent="ConsoleBox/Container"]
margin_right = 1024.0
margin_bottom = 265.0
focus_neighbour_left = NodePath("../LineEdit")
focus_neighbour_top = NodePath("../LineEdit")
focus_neighbour_right = NodePath("../LineEdit")
focus_neighbour_bottom = NodePath("../LineEdit")
focus_next = NodePath("../LineEdit")
focus_previous = NodePath("../LineEdit")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/bold_italics_font = SubResource( 4 )
custom_fonts/italics_font = SubResource( 5 )
custom_fonts/bold_font = SubResource( 6 )
custom_fonts/normal_font = SubResource( 7 )
custom_constants/line_separation = 4
bbcode_enabled = true

[node name="ConsoleLine" type="LineEdit" parent="ConsoleBox/Container"]
margin_top = 269.0
margin_right = 1024.0
margin_bottom = 300.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
size_flags_horizontal = 3
custom_styles/focus = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
script = ExtResource( 6 )
_sections_unfolded = [ "Anchor", "Caret", "Grow Direction", "Margin", "Material", "Pause", "Placeholder", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]
